@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2527 2024/04/17 13:19:44 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2528 2024/04/17 13:20:40 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4181,3 +4181,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed x11/py-keybinder [wiz 2024-04-17]
 	Removed x11/py-kiwi [wiz 2024-04-17]
 	Removed x11/py-gtksourceview [wiz 2024-04-17]
+	Removed x11/py-vte [wiz 2024-04-17]
